## @file CMakeLists.txt
## @brief Build configuration for Vestige unit tests.

add_executable(vestige_tests
    test_event_bus.cpp
    test_timer.cpp
    test_logger.cpp
    test_aabb.cpp
    test_entity.cpp
    test_scene.cpp
    test_framebuffer.cpp
    test_shadow_map.cpp
    test_tangent_calc.cpp
    test_skybox.cpp
    test_point_shadow_map.cpp
    test_hdr_pipeline.cpp
    test_pom.cpp
    test_gltf_loader.cpp
    test_pbr_material.cpp
    test_bloom.cpp
    test_ssao.cpp
    test_transparency.cpp
    test_emissive_lighting.cpp
    test_async_texture_loader.cpp
    test_taa.cpp
    test_text_rendering.cpp
    test_color_grading.cpp
    test_instanced_rendering.cpp
    test_cascaded_shadow_map.cpp
    test_ibl.cpp
    test_frustum_culling.cpp
    test_scene_serializer.cpp
    test_file_menu.cpp
    test_command_history.cpp
    test_particle_data.cpp
    test_animation_curve.cpp
    test_water_surface.cpp
    test_foliage_chunk.cpp
    test_spline_path.cpp
    test_biome_preset.cpp
    test_selection.cpp
    test_camera.cpp
    test_cpu_profiler.cpp
    test_memory_tracker.cpp
    test_obj_loader.cpp
    test_skeleton.cpp
    test_animation_sampler.cpp
    test_skeleton_animator.cpp
    test_cubicspline.cpp
    test_crossfade.cpp
    test_animation_state_machine.cpp
    test_root_motion.cpp
    test_easing.cpp
    test_tween.cpp
    test_ik_solver.cpp
    test_morph_target.cpp
    test_physics_world.cpp
    test_rigid_body.cpp
    test_physics_character_controller.cpp
    test_physics_constraint.cpp
    test_cloth_simulator.cpp
    test_cloth_presets.cpp
    test_camera_component.cpp
    test_morph_target_pipeline.cpp
    test_texture_filter.cpp
    test_ruler_tool.cpp
    test_density_map.cpp
    test_procedural_mesh.cpp
    test_facial_animation.cpp
    test_fabric_material.cpp
    test_lip_sync.cpp
    test_cloth_collision.cpp
    test_cloth_solver_improvements.cpp
    test_gpu_particle_system.cpp
    test_motion_matching.cpp
    test_advanced_physics.cpp
    test_environment_forces.cpp
    test_formula_library.cpp
    test_formula_compiler.cpp
    test_curve_fitter.cpp
    test_quality_manager.cpp
    test_architectural_tools.cpp
    test_catmull_rom_spline.cpp
    test_pressure_plate.cpp
    test_stasis_system.cpp
)

target_link_libraries(vestige_tests
    PRIVATE
        vestige_engine
        GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(vestige_tests
    PROPERTIES ENVIRONMENT "LSAN_OPTIONS=suppressions=${CMAKE_SOURCE_DIR}/asan_suppressions.txt"
)
